# Calibration

data/image/: calibration.yaml
data/left/: stereocalibration.yaml
src/: CMakeLists.txt  main.cpp  mono.cpp  monoCalibration.cpp  stereo.cpp  stereoCalibration.cpp
